# Cards-Simulator

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Cards.cpp  main.cpp
include/: Cards.hpp
